[gd_scene load_steps=2 format=3 uid="uid://b6t1icjq8ahl8"]

[ext_resource type="Script" path="res://scripts/CustomGameMenu.gd" id="1_dj66g"]

[node name="customGameMenu" type="Control" node_paths=PackedStringArray("densText", "sizeText", "densRange", "sizeRange")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 600.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
script = ExtResource("1_dj66g")
densText = NodePath("densText")
sizeText = NodePath("sizeText")
densRange = NodePath("density")
sizeRange = NodePath("size")

[node name="density" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.3
anchor_right = 0.8
anchor_bottom = 0.35
focus_mode = 0
min_value = 1.0
value = 1.0
rounded = true

[node name="size" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 0.55
offset_top = 7.0
offset_bottom = 7.0
focus_mode = 0
min_value = 1.0
max_value = 20.0
value = 1.0
rounded = true

[node name="back" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 0.8
focus_mode = 0
text = "back"

[node name="play" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 0.8
anchor_bottom = 0.8
focus_mode = 0
text = "play"

[node name="densText" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.25
anchor_right = 0.6
anchor_bottom = 0.3

[node name="sizeText" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.45
anchor_right = 0.6
anchor_bottom = 0.5

[connection signal="drag_ended" from="density" to="." method="playDragSound" unbinds=1]
[connection signal="value_changed" from="density" to="." method="density_changed"]
[connection signal="drag_ended" from="size" to="." method="playDragSound" unbinds=1]
[connection signal="value_changed" from="size" to="." method="size_changed"]
[connection signal="pressed" from="back" to="." method="back_button_pressed"]
[connection signal="pressed" from="play" to="." method="_new_game_adv"]
